[gd_scene load_steps=7 format=4 uid="uid://bxm7b0uraem3w"]

[ext_resource type="Script" path="res://scenes/debug/piece_viewer.gd" id="1_eekg2"]
[ext_resource type="PackedScene" uid="uid://isv1sog82mq8" path="res://scenes/game/highlight.tscn" id="2_0duy7"]
[ext_resource type="PackedScene" uid="uid://2y6uf3dq2362" path="res://scenes/debug/debug_overlay.tscn" id="3_6wdxa"]
[ext_resource type="Material" uid="uid://bm4udh55f5dgk" path="res://assets/shaders/game_grid.tres" id="4_5tdrp"]
[ext_resource type="TileSet" uid="uid://de3uupic4da2f" path="res://assets/tileset/board_tileset.tres" id="5_nwiiv"]
[ext_resource type="Script" path="res://scripts/game/visual/Board2D.gd" id="6_d5pwm"]

[node name="PieceViewer" type="Node2D" node_paths=PackedStringArray("board", "action_highlights") groups=["game_screen"]]
script = ExtResource("1_eekg2")
board = NodePath("BoardHolder/Board2D")
action_highlights = NodePath("BoardHolder/Board2D/CellHighlights")
highlight_scene = ExtResource("2_0duy7")

[node name="DebugOverlay" parent="." instance=ExtResource("3_6wdxa")]
offset_left = 47.0
offset_top = 99.0
offset_right = 315.0
offset_bottom = 601.0

[node name="BoardHolder" type="Node2D" parent="."]
position = Vector2(544, 340)
scale = Vector2(0.35, 0.35)

[node name="AdditionalTiles" type="TileMapLayer" parent="BoardHolder"]
unique_name_in_owner = true
material = ExtResource("4_5tdrp")
position = Vector2(-64, 64)
tile_set = ExtResource("5_nwiiv")
collision_enabled = false
navigation_enabled = false

[node name="BaseTiles" type="TileMapLayer" parent="BoardHolder"]
material = ExtResource("4_5tdrp")
use_parent_material = true
position = Vector2(-64, 64)
tile_map_data = PackedByteArray("AAD8/wMAAAAAAAAAAAD9/wIAAAAAAAAAAAD+/wEAAAAAAAAAAAD//wAAAAAAAAAAAAAAAP//AAAAAAAAAAABAP7/AAAAAAAAAAACAP3/AAAAAAAAAAADAPz/AAAAAAAAAAD+////AAAAAAAAAAD///7/AAAAAAAAAAD+//3/AAAAAAAAAAD8//3/AAAAAAAAAAD9//z/AAAAAAAAAAAAAP3/AAAAAAAAAAD///z/AAAAAAAAAAABAPz/AAAAAAAAAAADAP7/AAAAAAAAAAACAP//AAAAAAAAAAADAAAAAAAAAAAAAAABAAAAAAAAAAAAAAACAAEAAAAAAAAAAAAAAAEAAAAAAAAAAAABAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAD//wIAAAAAAAAAAAD+/wMAAAAAAAAAAAD8/wEAAAAAAAAAAAD9/wAAAAAAAAAAAAD8////AAAAAAAAAAACAAMAAAAAAAAAAAADAAIAAAAAAAAAAAD9/wMAAAABAAAAAAD8/wIAAAABAAAAAAD9/wEAAAABAAAAAAD8/wAAAAABAAAAAAD9////AAABAAAAAAD8//7/AAABAAAAAAD9//3/AAABAAAAAAD8//z/AAABAAAAAAD+//z/AAABAAAAAAAAAPz/AAABAAAAAAACAPz/AAABAAAAAAADAP3/AAABAAAAAAABAP3/AAABAAAAAAD///3/AAABAAAAAAD9//7/AAAAAAAAAAD+//7/AAABAAAAAAD+/wAAAAABAAAAAAD+/wIAAAABAAAAAAD//wEAAAABAAAAAAD//wMAAAABAAAAAAD/////AAABAAAAAAAAAAIAAAABAAAAAAAAAAAAAAABAAAAAAAAAP7/AAABAAAAAAABAP//AAABAAAAAAACAP7/AAABAAAAAAADAP//AAABAAAAAAACAAAAAAABAAAAAAABAAEAAAABAAAAAAACAAIAAAABAAAAAAABAAMAAAABAAAAAAADAAMAAAABAAAAAAADAAEAAAABAAAAAAD7/wMAAAABAAAAAAD6/wIAAAABAAAAAAD7/wEAAAABAAAAAAD6/wAAAAABAAAAAAD7////AAABAAAAAAD6//7/AAABAAAAAAD6//z/AAABAAAAAAD7//v/AAABAAAAAAD8//r/AAABAAAAAAD9//v/AAABAAAAAAD+//r/AAABAAAAAAD///v/AAABAAAAAAAAAPr/AAABAAAAAAABAPv/AAABAAAAAAACAPr/AAABAAAAAAADAPv/AAABAAAAAAAEAPr/AAABAAAAAAAFAPv/AAABAAAAAAAEAPz/AAABAAAAAAAFAP3/AAABAAAAAAAEAP7/AAABAAAAAAAFAP//AAABAAAAAAAEAAAAAAABAAAAAAAFAAEAAAABAAAAAAAEAAIAAAABAAAAAAAFAAMAAAABAAAAAAAEAAQAAAABAAAAAAACAAQAAAABAAAAAAABAAUAAAABAAAAAAAAAAQAAAABAAAAAAD//wUAAAABAAAAAAD+/wQAAAABAAAAAAD9/wUAAAABAAAAAAD8/wQAAAABAAAAAAD8/wYAAAABAAAAAAD7/wUAAAABAAAAAAD6/wQAAAABAAAAAAD6/wYAAAABAAAAAAD5/wUAAAABAAAAAAD4/wYAAAABAAAAAAD4/wQAAAABAAAAAAD5/wMAAAABAAAAAAD3/wUAAAABAAAAAAD2/wYAAAABAAAAAAD1/wUAAAABAAAAAADz/wUAAAABAAAAAAD0/wQAAAABAAAAAADz/wMAAAABAAAAAAD0/wIAAAABAAAAAADz/wEAAAABAAAAAADz////AAABAAAAAAD0//7/AAABAAAAAADz//3/AAABAAAAAAD0//z/AAABAAAAAADz//v/AAABAAAAAAD0//r/AAABAAAAAAD1//n/AAABAAAAAAD2//j/AAABAAAAAAD3//n/AAABAAAAAAD4//j/AAABAAAAAAD5//n/AAABAAAAAAD6//j/AAABAAAAAAD7//n/AAABAAAAAAD8//j/AAABAAAAAAD9//n/AAABAAAAAAD+//j/AAABAAAAAAD///n/AAABAAAAAAAAAPj/AAABAAAAAAABAPn/AAABAAAAAAACAPj/AAABAAAAAAADAPn/AAABAAAAAAAEAPj/AAABAAAAAAAFAPn/AAABAAAAAAAGAPj/AAABAAAAAAAHAPn/AAABAAAAAAAIAPj/AAABAAAAAAAJAPn/AAABAAAAAAAKAPj/AAABAAAAAAALAPn/AAABAAAAAAAMAPj/AAABAAAAAAAMAPr/AAABAAAAAAAMAPz/AAABAAAAAAAMAP7/AAABAAAAAAAMAAAAAAABAAAAAAAMAAIAAAABAAAAAAAMAAQAAAABAAAAAAALAAUAAAABAAAAAAAJAAUAAAABAAAAAAAHAAUAAAABAAAAAAAFAAUAAAABAAAAAAADAAUAAAABAAAAAAD+/wYAAAABAAAAAAAAAAYAAAABAAAAAAACAAYAAAABAAAAAAAEAAYAAAABAAAAAAAGAAYAAAABAAAAAAAIAAYAAAABAAAAAAAKAAYAAAABAAAAAAAMAAYAAAABAAAAAAAKAAQAAAABAAAAAAALAAMAAAABAAAAAAAKAAIAAAABAAAAAAAJAAEAAAABAAAAAAAIAAAAAAABAAAAAAAHAP//AAABAAAAAAAGAP7/AAABAAAAAAAHAP3/AAABAAAAAAAGAPz/AAABAAAAAAAHAPv/AAABAAAAAAAGAPr/AAABAAAAAAAIAPr/AAABAAAAAAAJAPv/AAABAAAAAAAKAPr/AAABAAAAAAALAPv/AAABAAAAAAAIAPz/AAABAAAAAAAKAPz/AAABAAAAAAAJAP3/AAABAAAAAAAIAP7/AAABAAAAAAAKAP7/AAABAAAAAAALAP3/AAABAAAAAAAJAP//AAABAAAAAAAKAAAAAAABAAAAAAALAP//AAABAAAAAAALAAEAAAABAAAAAAAGAAAAAAABAAAAAAAHAAEAAAABAAAAAAAGAAIAAAABAAAAAAAIAAIAAAABAAAAAAAHAAMAAAABAAAAAAAGAAQAAAABAAAAAAAIAAQAAAABAAAAAAAJAAMAAAABAAAAAAD2/wQAAAABAAAAAAD1/wMAAAABAAAAAAD2/wIAAAABAAAAAAD3/wMAAAABAAAAAAD4/wIAAAABAAAAAAD3/wEAAAABAAAAAAD1/wEAAAABAAAAAAD2/wAAAAABAAAAAAD4/wAAAAABAAAAAAD5/wEAAAABAAAAAAD5////AAABAAAAAAD3////AAABAAAAAAD1////AAABAAAAAAD2//7/AAABAAAAAAD4//7/AAABAAAAAAD7//3/AAABAAAAAAD5//3/AAABAAAAAAD3//3/AAABAAAAAAD1//3/AAABAAAAAAD2//z/AAABAAAAAAD1//v/AAABAAAAAAD2//r/AAABAAAAAAD3//v/AAABAAAAAAD4//r/AAABAAAAAAD4//z/AAABAAAAAAD5//v/AAABAAAAAAD6//r/AAABAAAAAAD7/wQAAAAAAAAAAAD6/wUAAAAAAAAAAAD5/wYAAAAAAAAAAAD4/wUAAAAAAAAAAAD3/wQAAAAAAAAAAAD2/wMAAAAAAAAAAAD1/wIAAAAAAAAAAAD0/wAAAAABAAAAAAD0/wEAAAAAAAAAAADz/wAAAAAAAAAAAAD0////AAAAAAAAAADz//7/AAAAAAAAAAD0//3/AAAAAAAAAADz//z/AAAAAAAAAADz/wIAAAAAAAAAAAD0/wMAAAAAAAAAAADz/wQAAAAAAAAAAAD0/wYAAAABAAAAAAD0/wUAAAAAAAAAAADz/wYAAAAAAAAAAAD1/wQAAAAAAAAAAAD1/wYAAAAAAAAAAAD2/wUAAAAAAAAAAAD3/wYAAAAAAAAAAAD5/wQAAAAAAAAAAAD4/wMAAAAAAAAAAAD3/wIAAAAAAAAAAAD2/wEAAAAAAAAAAAD1/wAAAAAAAAAAAAD2////AAAAAAAAAAD1//7/AAAAAAAAAAD2//3/AAAAAAAAAAD1//z/AAAAAAAAAAD0//v/AAAAAAAAAADz//r/AAAAAAAAAAD0//n/AAAAAAAAAAD1//j/AAAAAAAAAAD1//r/AAAAAAAAAAD2//n/AAAAAAAAAAD3//j/AAAAAAAAAAD2//v/AAAAAAAAAAD3//r/AAAAAAAAAAD3//z/AAAAAAAAAAD4//v/AAAAAAAAAAD4//n/AAAAAAAAAAD5//j/AAAAAAAAAAD5//r/AAAAAAAAAAD4//3/AAAAAAAAAAD3//7/AAAAAAAAAAD4////AAAAAAAAAAD3/wAAAAAAAAAAAAD4/wEAAAAAAAAAAAD5/wAAAAAAAAAAAAD5//7/AAAAAAAAAAD5//z/AAAAAAAAAAD6//v/AAAAAAAAAAD6//3/AAAAAAAAAAD7//z/AAAAAAAAAAD7//7/AAAAAAAAAAD6////AAAAAAAAAAD7/wAAAAAAAAAAAAD6/wEAAAAAAAAAAAD5/wIAAAAAAAAAAAD6/wMAAAAAAAAAAAD7/wIAAAAAAAAAAAD7/wYAAAAAAAAAAAD8/wUAAAAAAAAAAAD9/wQAAAAAAAAAAAD9/wYAAAAAAAAAAAD+/wUAAAAAAAAAAAD//wQAAAAAAAAAAAD//wYAAAAAAAAAAAAAAAUAAAAAAAAAAAABAAQAAAAAAAAAAAABAAYAAAAAAAAAAAACAAUAAAAAAAAAAAADAAQAAAAAAAAAAAADAAYAAAAAAAAAAAAEAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAGAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAIAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAKAAUAAAAAAAAAAAALAAYAAAAAAAAAAAAMAAUAAAAAAAAAAAALAAQAAAAAAAAAAAAJAAQAAAAAAAAAAAAHAAQAAAAAAAAAAAAFAAQAAAAAAAAAAAAEAAMAAAAAAAAAAAAGAAMAAAAAAAAAAAAFAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAKAAMAAAAAAAAAAAAMAAMAAAAAAAAAAAALAAIAAAAAAAAAAAAJAAIAAAAAAAAAAAAHAAIAAAAAAAAAAAAEAAEAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAALAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAP//AAAAAAAAAAALAP7/AAAAAAAAAAAKAP//AAAAAAAAAAAJAP7/AAAAAAAAAAAIAP//AAAAAAAAAAAHAP7/AAAAAAAAAAAGAP//AAAAAAAAAAAFAP7/AAAAAAAAAAAEAP//AAAAAAAAAAAEAP3/AAAAAAAAAAAGAP3/AAAAAAAAAAAFAPz/AAAAAAAAAAAHAPz/AAAAAAAAAAAIAP3/AAAAAAAAAAAJAPz/AAAAAAAAAAAKAP3/AAAAAAAAAAALAPz/AAAAAAAAAAAMAP3/AAAAAAAAAAAMAPv/AAAAAAAAAAAKAPv/AAAAAAAAAAALAPr/AAAAAAAAAAAJAPr/AAAAAAAAAAAIAPv/AAAAAAAAAAAHAPr/AAAAAAAAAAAIAPn/AAAAAAAAAAAJAPj/AAAAAAAAAAAKAPn/AAAAAAAAAAALAPj/AAAAAAAAAAAMAPn/AAAAAAAAAAAHAPj/AAAAAAAAAAAGAPn/AAAAAAAAAAAFAPj/AAAAAAAAAAAEAPn/AAAAAAAAAAAFAPr/AAAAAAAAAAAGAPv/AAAAAAAAAAAEAPv/AAAAAAAAAAADAPr/AAAAAAAAAAACAPv/AAAAAAAAAAABAPr/AAAAAAAAAAAAAPv/AAAAAAAAAAD///r/AAAAAAAAAAD+//v/AAAAAAAAAAD9//r/AAAAAAAAAAD8//v/AAAAAAAAAAD7//r/AAAAAAAAAAD6//n/AAAAAAAAAAD7//j/AAAAAAAAAAD8//n/AAAAAAAAAAD9//j/AAAAAAAAAAD+//n/AAAAAAAAAAD///j/AAAAAAAAAAAAAPn/AAAAAAAAAAABAPj/AAAAAAAAAAACAPn/AAAAAAAAAAADAPj/AAAAAAAAAADz//f/AAABAAAAAADz//X/AAABAAAAAADz//P/AAABAAAAAADz//b/AAAAAAAAAADz//T/AAAAAAAAAADz/wgAAAAAAAAAAADz/woAAAAAAAAAAADz/wwAAAAAAAAAAAD0/wcAAAAAAAAAAAD0/wkAAAAAAAAAAAD0/wsAAAAAAAAAAAD1/wwAAAAAAAAAAAD1/woAAAAAAAAAAAD1/wgAAAAAAAAAAAD2/wcAAAAAAAAAAAD2/wkAAAAAAAAAAAD2/wsAAAAAAAAAAAD3/wwAAAAAAAAAAAD3/woAAAAAAAAAAAD3/wgAAAAAAAAAAAD4/wcAAAAAAAAAAAD4/wkAAAAAAAAAAAD4/wsAAAAAAAAAAAD5/wwAAAAAAAAAAAD5/woAAAAAAAAAAAD5/wgAAAAAAAAAAAD6/wcAAAAAAAAAAAD6/wkAAAAAAAAAAAD6/wsAAAAAAAAAAAD7/wwAAAAAAAAAAAD8/wwAAAABAAAAAAD9/wwAAAAAAAAAAAD+/wwAAAABAAAAAAD//wwAAAAAAAAAAAAAAAwAAAABAAAAAAABAAwAAAAAAAAAAAACAAwAAAABAAAAAAADAAwAAAAAAAAAAAAEAAwAAAABAAAAAAAFAAwAAAAAAAAAAAAGAAwAAAABAAAAAAAHAAwAAAAAAAAAAAAIAAwAAAABAAAAAAAJAAwAAAAAAAAAAAAKAAwAAAABAAAAAAALAAwAAAAAAAAAAAAMAAwAAAABAAAAAAAMAAsAAAAAAAAAAAALAAsAAAABAAAAAAAKAAsAAAAAAAAAAAAJAAsAAAABAAAAAAAIAAsAAAAAAAAAAAAHAAsAAAABAAAAAAAGAAsAAAAAAAAAAAAFAAsAAAABAAAAAAAEAAsAAAAAAAAAAAADAAsAAAABAAAAAAACAAsAAAAAAAAAAAABAAsAAAABAAAAAAAAAAsAAAAAAAAAAAD//wsAAAABAAAAAAD+/wsAAAAAAAAAAAD9/wsAAAABAAAAAAD8/wsAAAAAAAAAAAD7/wsAAAABAAAAAAD7/woAAAAAAAAAAAD8/woAAAABAAAAAAD9/woAAAAAAAAAAAD+/woAAAABAAAAAAD//woAAAAAAAAAAAAAAAoAAAABAAAAAAABAAoAAAAAAAAAAAACAAoAAAABAAAAAAADAAoAAAAAAAAAAAAEAAoAAAABAAAAAAAFAAoAAAAAAAAAAAAGAAoAAAABAAAAAAAHAAoAAAAAAAAAAAAIAAoAAAABAAAAAAAJAAoAAAAAAAAAAAAKAAoAAAABAAAAAAALAAoAAAAAAAAAAAALAAkAAAABAAAAAAAMAAkAAAAAAAAAAAAMAAoAAAABAAAAAAAKAAkAAAAAAAAAAAAJAAkAAAABAAAAAAAIAAkAAAAAAAAAAAAHAAkAAAABAAAAAAAGAAkAAAAAAAAAAAAFAAkAAAABAAAAAAAEAAkAAAAAAAAAAAADAAkAAAABAAAAAAACAAkAAAAAAAAAAAABAAkAAAABAAAAAAAAAAkAAAAAAAAAAAD//wkAAAABAAAAAAD+/wkAAAAAAAAAAAD9/wkAAAABAAAAAAD8/wkAAAAAAAAAAAD7/wkAAAABAAAAAAD7/wgAAAAAAAAAAAD8/wgAAAABAAAAAAD9/wgAAAAAAAAAAAD+/wgAAAABAAAAAAD//wgAAAAAAAAAAAAAAAgAAAABAAAAAAABAAgAAAAAAAAAAAACAAgAAAABAAAAAAADAAgAAAAAAAAAAAAEAAgAAAABAAAAAAAFAAgAAAAAAAAAAAAGAAgAAAABAAAAAAAHAAgAAAAAAAAAAAAIAAgAAAABAAAAAAAJAAgAAAAAAAAAAAAKAAgAAAABAAAAAAALAAgAAAAAAAAAAAAMAAgAAAABAAAAAAAMAAcAAAAAAAAAAAALAAcAAAABAAAAAAAKAAcAAAAAAAAAAAAJAAcAAAABAAAAAAAIAAcAAAAAAAAAAAAHAAcAAAABAAAAAAAGAAcAAAAAAAAAAAAFAAcAAAABAAAAAAAEAAcAAAAAAAAAAAADAAcAAAABAAAAAAABAAcAAAABAAAAAAAAAAcAAAAAAAAAAAD//wcAAAABAAAAAAD+/wcAAAAAAAAAAAD9/wcAAAABAAAAAAD8/wcAAAAAAAAAAAD7/wcAAAABAAAAAAACAAcAAAAAAAAAAADz/wcAAAABAAAAAAD0/wgAAAABAAAAAADz/wkAAAABAAAAAAD0/woAAAABAAAAAAD1/wsAAAABAAAAAAD2/wwAAAABAAAAAADz/wsAAAABAAAAAAD0/wwAAAABAAAAAAD1/wkAAAABAAAAAAD2/woAAAABAAAAAAD3/wsAAAABAAAAAAD4/wwAAAABAAAAAAD1/wcAAAABAAAAAAD2/wgAAAABAAAAAAD3/wkAAAABAAAAAAD4/woAAAABAAAAAAD5/wsAAAABAAAAAAD6/wwAAAABAAAAAAD3/wcAAAABAAAAAAD4/wgAAAABAAAAAAD5/wkAAAABAAAAAAD6/woAAAABAAAAAAD5/wcAAAABAAAAAAD6/wgAAAABAAAAAAD0//f/AAAAAAAAAAD1//f/AAABAAAAAAD4//f/AAAAAAAAAAD5//f/AAABAAAAAAD6//f/AAAAAAAAAAD7//f/AAABAAAAAAD8//f/AAAAAAAAAAD9//f/AAABAAAAAAD+//f/AAAAAAAAAAD///f/AAABAAAAAAAAAPf/AAAAAAAAAAABAPf/AAABAAAAAAACAPf/AAAAAAAAAAADAPf/AAABAAAAAAAEAPf/AAAAAAAAAAAFAPf/AAABAAAAAAAGAPf/AAAAAAAAAAAHAPf/AAABAAAAAAAIAPf/AAAAAAAAAAAJAPf/AAABAAAAAAAKAPf/AAAAAAAAAAALAPf/AAABAAAAAAAMAPf/AAAAAAAAAAD0//P/AAAAAAAAAAD0//T/AAABAAAAAAD0//X/AAAAAAAAAAD0//b/AAABAAAAAAD1//P/AAABAAAAAAD1//T/AAAAAAAAAAD1//X/AAABAAAAAAD1//b/AAAAAAAAAAD2//P/AAAAAAAAAAD2//T/AAABAAAAAAD2//X/AAAAAAAAAAD3//P/AAABAAAAAAD3//T/AAAAAAAAAAD3//X/AAABAAAAAAD4//P/AAAAAAAAAAD4//T/AAABAAAAAAD4//X/AAAAAAAAAAD4//b/AAABAAAAAAD5//P/AAABAAAAAAD5//T/AAAAAAAAAAD5//X/AAABAAAAAAD5//b/AAAAAAAAAAD6//P/AAAAAAAAAAD6//T/AAABAAAAAAD6//X/AAAAAAAAAAD6//b/AAABAAAAAAD7//P/AAABAAAAAAD7//T/AAAAAAAAAAD7//X/AAABAAAAAAD7//b/AAAAAAAAAAD8//P/AAAAAAAAAAD8//T/AAABAAAAAAD8//X/AAAAAAAAAAD8//b/AAABAAAAAAD9//P/AAABAAAAAAD9//T/AAAAAAAAAAD9//X/AAABAAAAAAD9//b/AAAAAAAAAAD+//P/AAAAAAAAAAD+//T/AAABAAAAAAD+//X/AAAAAAAAAAD+//b/AAABAAAAAAD///P/AAABAAAAAAD///T/AAAAAAAAAAD///X/AAABAAAAAAD///b/AAAAAAAAAAAAAPP/AAAAAAAAAAAAAPT/AAABAAAAAAAAAPX/AAAAAAAAAAAAAPb/AAABAAAAAAABAPP/AAABAAAAAAABAPT/AAAAAAAAAAABAPX/AAABAAAAAAABAPb/AAAAAAAAAAACAPP/AAAAAAAAAAACAPT/AAABAAAAAAACAPX/AAAAAAAAAAACAPb/AAABAAAAAAADAPP/AAABAAAAAAADAPT/AAAAAAAAAAADAPX/AAABAAAAAAADAPb/AAAAAAAAAAAEAPP/AAAAAAAAAAAEAPT/AAABAAAAAAAEAPX/AAAAAAAAAAAEAPb/AAABAAAAAAAFAPP/AAABAAAAAAAFAPT/AAAAAAAAAAAFAPX/AAABAAAAAAAFAPb/AAAAAAAAAAAGAPP/AAAAAAAAAAAGAPT/AAABAAAAAAAGAPX/AAAAAAAAAAAGAPb/AAABAAAAAAAHAPP/AAABAAAAAAAHAPT/AAAAAAAAAAAHAPX/AAABAAAAAAAHAPb/AAAAAAAAAAAIAPP/AAAAAAAAAAAIAPT/AAABAAAAAAAIAPX/AAAAAAAAAAAIAPb/AAABAAAAAAAJAPP/AAABAAAAAAAJAPT/AAAAAAAAAAAJAPX/AAABAAAAAAAJAPb/AAAAAAAAAAAKAPP/AAAAAAAAAAAKAPT/AAABAAAAAAAKAPX/AAAAAAAAAAAKAPb/AAABAAAAAAALAPP/AAABAAAAAAALAPT/AAAAAAAAAAALAPX/AAABAAAAAAALAPb/AAAAAAAAAAAMAPP/AAAAAAAAAAAMAPT/AAABAAAAAAAMAPX/AAAAAAAAAAAMAPb/AAABAAAAAADz//n/AAABAAAAAAD0//j/AAABAAAAAADz//j/AAAAAAAAAAD2//b/AAABAAAAAAD2//f/AAAAAAAAAAD3//b/AAAAAAAAAAD3//f/AAABAAAAAAANAAsAAAABAAAAAAANAAwAAAAAAAAAAAAOAAsAAAAAAAAAAAAOAAwAAAABAAAAAAANAAkAAAABAAAAAAANAAoAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAABAAAAAAANAAcAAAABAAAAAAANAAgAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAABAAAAAAANAAUAAAABAAAAAAANAAYAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAABAAAAAAANAAMAAAABAAAAAAANAAQAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAABAAAAAAANAAEAAAABAAAAAAANAAIAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAABAAAAAAANAP//AAABAAAAAAANAAAAAAAAAAAAAAAOAP//AAAAAAAAAAAOAAAAAAABAAAAAAANAP3/AAABAAAAAAANAP7/AAAAAAAAAAAOAP3/AAAAAAAAAAAOAP7/AAABAAAAAAANAPv/AAABAAAAAAANAPz/AAAAAAAAAAAOAPv/AAAAAAAAAAAOAPz/AAABAAAAAAANAPn/AAABAAAAAAANAPr/AAAAAAAAAAAOAPn/AAAAAAAAAAAOAPr/AAABAAAAAAANAPf/AAABAAAAAAANAPj/AAAAAAAAAAAOAPf/AAAAAAAAAAAOAPj/AAABAAAAAAANAPX/AAABAAAAAAANAPb/AAAAAAAAAAAOAPX/AAAAAAAAAAAOAPb/AAABAAAAAAANAPP/AAABAAAAAAANAPT/AAAAAAAAAAAOAPP/AAAAAAAAAAAOAPT/AAABAAAAAAANAPH/AAABAAAAAAANAPL/AAAAAAAAAAAOAPH/AAAAAAAAAAAOAPL/AAABAAAAAAALAPH/AAABAAAAAAALAPL/AAAAAAAAAAAMAPH/AAAAAAAAAAAMAPL/AAABAAAAAAAJAPH/AAABAAAAAAAJAPL/AAAAAAAAAAAKAPH/AAAAAAAAAAAKAPL/AAABAAAAAAAHAPH/AAABAAAAAAAHAPL/AAAAAAAAAAAIAPH/AAAAAAAAAAAIAPL/AAABAAAAAAAFAPH/AAABAAAAAAAFAPL/AAAAAAAAAAAGAPH/AAAAAAAAAAAGAPL/AAABAAAAAAADAPH/AAABAAAAAAADAPL/AAAAAAAAAAAEAPH/AAAAAAAAAAAEAPL/AAABAAAAAAABAPH/AAABAAAAAAABAPL/AAAAAAAAAAACAPH/AAAAAAAAAAACAPL/AAABAAAAAAD///H/AAABAAAAAAD///L/AAAAAAAAAAAAAPH/AAAAAAAAAAAAAPL/AAABAAAAAAD9//H/AAABAAAAAAD9//L/AAAAAAAAAAD+//H/AAAAAAAAAAD+//L/AAABAAAAAAD7//H/AAABAAAAAAD7//L/AAAAAAAAAAD8//H/AAAAAAAAAAD8//L/AAABAAAAAAD5//H/AAABAAAAAAD5//L/AAAAAAAAAAD6//H/AAAAAAAAAAD6//L/AAABAAAAAAD3//H/AAABAAAAAAD3//L/AAAAAAAAAAD4//H/AAAAAAAAAAD4//L/AAABAAAAAAD1//H/AAABAAAAAAD1//L/AAAAAAAAAAD2//H/AAAAAAAAAAD2//L/AAABAAAAAADz//H/AAABAAAAAADz//L/AAAAAAAAAAD0//H/AAAAAAAAAAD0//L/AAABAAAAAADx//H/AAABAAAAAADx//L/AAAAAAAAAADy//H/AAAAAAAAAADy//L/AAABAAAAAADx//P/AAABAAAAAADx//T/AAAAAAAAAADy//P/AAAAAAAAAADy//T/AAABAAAAAADx//X/AAABAAAAAADx//b/AAAAAAAAAADy//X/AAAAAAAAAADy//b/AAABAAAAAADx//f/AAABAAAAAADx//j/AAAAAAAAAADy//f/AAAAAAAAAADy//j/AAABAAAAAADx//n/AAABAAAAAADx//r/AAAAAAAAAADy//n/AAAAAAAAAADy//r/AAABAAAAAADx//v/AAABAAAAAADx//z/AAAAAAAAAADy//v/AAAAAAAAAADy//z/AAABAAAAAADx//3/AAABAAAAAADx//7/AAAAAAAAAADy//3/AAAAAAAAAADy//7/AAABAAAAAADx////AAABAAAAAADx/wAAAAAAAAAAAADy////AAAAAAAAAADy/wAAAAABAAAAAADx/wEAAAABAAAAAADx/wIAAAAAAAAAAADy/wEAAAAAAAAAAADy/wIAAAABAAAAAADx/wMAAAABAAAAAADx/wQAAAAAAAAAAADy/wMAAAAAAAAAAADy/wQAAAABAAAAAADx/wUAAAABAAAAAADx/wYAAAAAAAAAAADy/wUAAAAAAAAAAADy/wYAAAABAAAAAADx/wcAAAABAAAAAADx/wgAAAAAAAAAAADy/wcAAAAAAAAAAADy/wgAAAABAAAAAADx/wkAAAABAAAAAADx/woAAAAAAAAAAADy/wkAAAAAAAAAAADy/woAAAABAAAAAADx/wsAAAABAAAAAADx/wwAAAAAAAAAAADy/wsAAAAAAAAAAADy/wwAAAABAAAAAADx/w0AAAABAAAAAADx/w4AAAAAAAAAAADy/w0AAAAAAAAAAADy/w4AAAABAAAAAADz/w0AAAABAAAAAADz/w4AAAAAAAAAAAD0/w0AAAAAAAAAAAD0/w4AAAABAAAAAAD1/w0AAAABAAAAAAD1/w4AAAAAAAAAAAD2/w0AAAAAAAAAAAD2/w4AAAABAAAAAAD3/w0AAAABAAAAAAD3/w4AAAAAAAAAAAD4/w0AAAAAAAAAAAD4/w4AAAABAAAAAAD5/w0AAAABAAAAAAD5/w4AAAAAAAAAAAD6/w0AAAAAAAAAAAD6/w4AAAABAAAAAAD7/w0AAAABAAAAAAD7/w4AAAAAAAAAAAD8/w0AAAAAAAAAAAD8/w4AAAABAAAAAAD9/w0AAAABAAAAAAD9/w4AAAAAAAAAAAD+/w0AAAAAAAAAAAD+/w4AAAABAAAAAAAJAA0AAAABAAAAAAAJAA4AAAAAAAAAAAAKAA0AAAAAAAAAAAAKAA4AAAABAAAAAAAHAA0AAAABAAAAAAAHAA4AAAAAAAAAAAAIAA0AAAAAAAAAAAAIAA4AAAABAAAAAAAFAA0AAAABAAAAAAAFAA4AAAAAAAAAAAAGAA0AAAAAAAAAAAAGAA4AAAABAAAAAAADAA0AAAABAAAAAAADAA4AAAAAAAAAAAAEAA0AAAAAAAAAAAAEAA4AAAABAAAAAAABAA0AAAABAAAAAAABAA4AAAAAAAAAAAACAA0AAAAAAAAAAAACAA4AAAABAAAAAAD//w0AAAABAAAAAAD//w4AAAAAAAAAAAAAAA0AAAAAAAAAAAAAAA4AAAABAAAAAAALAA0AAAABAAAAAAALAA4AAAAAAAAAAAAMAA0AAAAAAAAAAAAMAA4AAAABAAAAAAANAA0AAAABAAAAAAANAA4AAAAAAAAAAAAOAA0AAAAAAAAAAAAOAA4AAAABAAAAAAAPAA0AAAABAAAAAAAPAA4AAAAAAAAAAAAPAAsAAAABAAAAAAAPAAwAAAAAAAAAAAAPAAkAAAABAAAAAAAPAAoAAAAAAAAAAAAPAAcAAAABAAAAAAAPAAgAAAAAAAAAAAAPAAUAAAABAAAAAAAPAAYAAAAAAAAAAAAPAAMAAAABAAAAAAAPAAQAAAAAAAAAAAAPAAEAAAABAAAAAAAPAAIAAAAAAAAAAAAPAP//AAABAAAAAAAPAAAAAAAAAAAAAAAPAP3/AAABAAAAAAAPAP7/AAAAAAAAAAAPAPv/AAABAAAAAAAPAPz/AAAAAAAAAAAPAPf/AAABAAAAAAAPAPj/AAAAAAAAAAAPAPX/AAABAAAAAAAPAPb/AAAAAAAAAAAPAPn/AAABAAAAAAAPAPr/AAAAAAAAAAAPAPP/AAABAAAAAAAPAPT/AAAAAAAAAAAPAPH/AAABAAAAAAAPAPL/AAAAAAAAAAAPAPD/AAAAAAAAAAANAPD/AAAAAAAAAAAOAPD/AAABAAAAAAALAPD/AAAAAAAAAAAMAPD/AAABAAAAAAAJAPD/AAAAAAAAAAAKAPD/AAABAAAAAAAHAPD/AAAAAAAAAAAIAPD/AAABAAAAAAAFAPD/AAAAAAAAAAAGAPD/AAABAAAAAAADAPD/AAAAAAAAAAAEAPD/AAABAAAAAAABAPD/AAAAAAAAAAACAPD/AAABAAAAAAD///D/AAAAAAAAAAAAAPD/AAABAAAAAAD9//D/AAAAAAAAAAD+//D/AAABAAAAAAD7//D/AAAAAAAAAAD8//D/AAABAAAAAAD5//D/AAAAAAAAAAD6//D/AAABAAAAAAD3//D/AAAAAAAAAAD4//D/AAABAAAAAAD1//D/AAAAAAAAAAD2//D/AAABAAAAAADz//D/AAAAAAAAAAD0//D/AAABAAAAAADx//D/AAAAAAAAAADy//D/AAABAAAAAADv/w8AAAABAAAAAADv/xAAAAAAAAAAAADw/w8AAAAAAAAAAADw/xAAAAABAAAAAADx/w8AAAABAAAAAADx/xAAAAAAAAAAAADy/w8AAAAAAAAAAADy/xAAAAABAAAAAADz/w8AAAABAAAAAADz/xAAAAAAAAAAAAD0/w8AAAAAAAAAAAD0/xAAAAABAAAAAAD1/w8AAAABAAAAAAD1/xAAAAAAAAAAAAD2/w8AAAAAAAAAAAD2/xAAAAABAAAAAAD3/w8AAAABAAAAAAD3/xAAAAAAAAAAAAD4/w8AAAAAAAAAAAD4/xAAAAABAAAAAAD5/w8AAAABAAAAAAD5/xAAAAAAAAAAAAD6/w8AAAAAAAAAAAD6/xAAAAABAAAAAAD7/w8AAAABAAAAAAD7/xAAAAAAAAAAAAD8/w8AAAAAAAAAAAD8/xAAAAABAAAAAAD9/w8AAAABAAAAAAD9/xAAAAAAAAAAAAD+/w8AAAAAAAAAAAD+/xAAAAABAAAAAAD//w8AAAABAAAAAAD//xAAAAAAAAAAAAAAAA8AAAAAAAAAAAAAABAAAAABAAAAAAABAA8AAAABAAAAAAABABAAAAAAAAAAAAACAA8AAAAAAAAAAAACABAAAAABAAAAAAADAA8AAAABAAAAAAADABAAAAAAAAAAAAAEAA8AAAAAAAAAAAAEABAAAAABAAAAAAAFAA8AAAABAAAAAAAFABAAAAAAAAAAAAAGAA8AAAAAAAAAAAAGABAAAAABAAAAAAAHAA8AAAABAAAAAAAHABAAAAAAAAAAAAAIAA8AAAAAAAAAAAAIABAAAAABAAAAAAAJAA8AAAABAAAAAAAJABAAAAAAAAAAAAAKAA8AAAAAAAAAAAAKABAAAAABAAAAAAALAA8AAAABAAAAAAALABAAAAAAAAAAAAAMAA8AAAAAAAAAAAAMABAAAAABAAAAAAANAA8AAAABAAAAAAANABAAAAAAAAAAAAAOAA8AAAAAAAAAAAAOABAAAAABAAAAAAAPAA8AAAABAAAAAAAPABAAAAAAAAAAAAAQAA8AAAAAAAAAAAAQABAAAAABAAAAAAAQAA0AAAAAAAAAAAAQAA4AAAABAAAAAAAQAAsAAAAAAAAAAAAQAAwAAAABAAAAAAAQAAkAAAAAAAAAAAAQAAoAAAABAAAAAAAQAAcAAAAAAAAAAAAQAAgAAAABAAAAAAAQAAUAAAAAAAAAAAAQAAYAAAABAAAAAAAQAAMAAAAAAAAAAAAQAAQAAAABAAAAAAAQAAEAAAAAAAAAAAAQAAIAAAABAAAAAAAQAP//AAAAAAAAAAAQAAAAAAABAAAAAAAQAP3/AAAAAAAAAAAQAP7/AAABAAAAAAAQAPv/AAAAAAAAAAAQAPz/AAABAAAAAAAQAPn/AAAAAAAAAAAQAPr/AAABAAAAAAAQAPf/AAAAAAAAAAAQAPj/AAABAAAAAAAQAPX/AAAAAAAAAAAQAPb/AAABAAAAAAAQAPP/AAAAAAAAAAAQAPT/AAABAAAAAAAQAPH/AAAAAAAAAAAQAPL/AAABAAAAAAANAO//AAABAAAAAAAOAO//AAAAAAAAAAAPAO//AAABAAAAAAAQAO//AAAAAAAAAAAQAPD/AAABAAAAAAALAO//AAABAAAAAAAMAO//AAAAAAAAAAAJAO//AAABAAAAAAAKAO//AAAAAAAAAAAHAO//AAABAAAAAAAIAO//AAAAAAAAAAAFAO//AAABAAAAAAAGAO//AAAAAAAAAAADAO//AAABAAAAAAAEAO//AAAAAAAAAAABAO//AAABAAAAAAACAO//AAAAAAAAAAD//+//AAABAAAAAAAAAO//AAAAAAAAAAD9/+//AAABAAAAAAD+/+//AAAAAAAAAAD7/+//AAABAAAAAAD8/+//AAAAAAAAAAD5/+//AAABAAAAAAD6/+//AAAAAAAAAAD3/+//AAABAAAAAAD4/+//AAAAAAAAAAD1/+//AAABAAAAAAD2/+//AAAAAAAAAADz/+//AAABAAAAAAD0/+//AAAAAAAAAADx/+//AAABAAAAAADy/+//AAAAAAAAAADv/+//AAABAAAAAADv//D/AAAAAAAAAADw/+//AAAAAAAAAADw//D/AAABAAAAAADv//H/AAABAAAAAADv//L/AAAAAAAAAADw//H/AAAAAAAAAADw//L/AAABAAAAAADv//P/AAABAAAAAADv//T/AAAAAAAAAADw//P/AAAAAAAAAADw//T/AAABAAAAAADv//X/AAABAAAAAADv//b/AAAAAAAAAADw//X/AAAAAAAAAADw//b/AAABAAAAAADv//f/AAABAAAAAADv//j/AAAAAAAAAADw//f/AAAAAAAAAADw//j/AAABAAAAAADv//n/AAABAAAAAADv//r/AAAAAAAAAADw//n/AAAAAAAAAADw//r/AAABAAAAAADv//v/AAABAAAAAADv//z/AAAAAAAAAADw//v/AAAAAAAAAADw//z/AAABAAAAAADv//3/AAABAAAAAADv//7/AAAAAAAAAADw//3/AAAAAAAAAADw//7/AAABAAAAAADv////AAABAAAAAADv/wAAAAAAAAAAAADw////AAAAAAAAAADw/wAAAAABAAAAAADv/wEAAAABAAAAAADv/wIAAAAAAAAAAADw/wEAAAAAAAAAAADw/wIAAAABAAAAAADv/wMAAAABAAAAAADv/wQAAAAAAAAAAADw/wMAAAAAAAAAAADw/wQAAAABAAAAAADv/wUAAAABAAAAAADv/wYAAAAAAAAAAADw/wUAAAAAAAAAAADw/wYAAAABAAAAAADv/wcAAAABAAAAAADv/wgAAAAAAAAAAADw/wcAAAAAAAAAAADw/wgAAAABAAAAAADv/wkAAAABAAAAAADv/woAAAAAAAAAAADw/wkAAAAAAAAAAADw/woAAAABAAAAAADv/wsAAAABAAAAAADv/wwAAAAAAAAAAADw/wsAAAAAAAAAAADw/wwAAAABAAAAAADv/w0AAAABAAAAAADv/w4AAAAAAAAAAADw/w0AAAAAAAAAAADw/w4AAAABAAAAAAARAA8AAAABAAAAAAARABAAAAAAAAAAAAARAA0AAAABAAAAAAARAA4AAAAAAAAAAAARAAsAAAABAAAAAAARAAwAAAAAAAAAAAARAAkAAAABAAAAAAARAAoAAAAAAAAAAAARAAcAAAABAAAAAAARAAgAAAAAAAAAAAARAAUAAAABAAAAAAARAAYAAAAAAAAAAAARAP3/AAABAAAAAAARAP7/AAAAAAAAAAARAP//AAABAAAAAAARAAAAAAAAAAAAAAARAAEAAAABAAAAAAARAAIAAAAAAAAAAAARAAMAAAABAAAAAAARAAQAAAAAAAAAAAARAPv/AAABAAAAAAARAPz/AAAAAAAAAAARAPn/AAABAAAAAAARAPr/AAAAAAAAAAARAPf/AAABAAAAAAARAPj/AAAAAAAAAAARAPX/AAABAAAAAAARAPb/AAAAAAAAAAARAPP/AAABAAAAAAARAPT/AAAAAAAAAAARAPH/AAABAAAAAAARAPL/AAAAAAAAAAARAO//AAABAAAAAAARAPD/AAAAAAAAAAARAO7/AAAAAAAAAAAPAO7/AAAAAAAAAAAQAO7/AAABAAAAAAANAO7/AAAAAAAAAAAOAO7/AAABAAAAAAALAO7/AAAAAAAAAAAMAO7/AAABAAAAAAAJAO7/AAAAAAAAAAAKAO7/AAABAAAAAAAHAO7/AAAAAAAAAAAIAO7/AAABAAAAAAAFAO7/AAAAAAAAAAAGAO7/AAABAAAAAAADAO7/AAAAAAAAAAAEAO7/AAABAAAAAAABAO7/AAAAAAAAAAACAO7/AAABAAAAAAD//+7/AAAAAAAAAAAAAO7/AAABAAAAAAD9/+7/AAAAAAAAAAD+/+7/AAABAAAAAAD7/+7/AAAAAAAAAAD8/+7/AAABAAAAAAD5/+7/AAAAAAAAAAD6/+7/AAABAAAAAAD3/+7/AAAAAAAAAAD4/+7/AAABAAAAAAD1/+7/AAAAAAAAAAD2/+7/AAABAAAAAADz/+7/AAAAAAAAAAD0/+7/AAABAAAAAADx/+7/AAAAAAAAAADy/+7/AAABAAAAAADv/+7/AAAAAAAAAADw/+7/AAABAAAAAAA=")
tile_set = ExtResource("5_nwiiv")
collision_enabled = false
navigation_enabled = false

[node name="Board2D" type="Node2D" parent="BoardHolder"]
position = Vector2(-64, 64)
script = ExtResource("6_d5pwm")

[node name="Pieces" type="Node2D" parent="BoardHolder/Board2D" groups=["piece_holder"]]

[node name="CellHighlights" type="Node2D" parent="BoardHolder/Board2D"]
z_index = 1

[node name="Camera2D" type="Camera2D" parent="BoardHolder"]
zoom = Vector2(0.851, 0.851)

[node name="GameUI" type="Control" parent="."]
top_level = true
z_index = 3000
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="GameInput" type="Control" parent="GameUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="UpdateTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="gui_input" from="GameUI/GameInput" to="." method="_on_game_input_gui_input"]
[connection signal="mouse_entered" from="GameUI/GameInput" to="." method="_on_game_input_mouse_entered"]
[connection signal="mouse_exited" from="GameUI/GameInput" to="." method="_on_game_input_mouse_exited"]

[editable path="DebugOverlay"]
